--- a/.github/workflows/mta.yml
+++ b/.github/workflows/mta.yml
@@ -1,4 +1,6 @@
 name: build mta
+env:
+  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 on:
   workflow_dispatch:
   schedule:
@@ -27,7 +29,6 @@ jobs:
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       - uses: docker/build-push-action@v3
